[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "asyncgpt"
version = "1.2.0"
authors = ["Just1z"]
description = "Asynchronus framework for ChatGPT API"
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
homepage="https://github.com/Just1z/asyncgpt"
repository="https://github.com/Just1z/asyncgpt"
keywords = [
    "chatgpt", "gpt", "async", "api", "openai",
    "framework", "asyncio", "wrapper"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = {version="^3.8.4"}

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Just1z/asyncgpt/issues"